reduce the amount of warnings